--- a/index.html
+++ b/index.html
@@ -5,82 +5,111 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="index.html" lang="en"><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="#studio">Студія</a></li>
-          <li><a href="#portfolio">Портфоліо</a></li>
-          <li><a href="#contacts">Контакти</a></li>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="link logo header-logo" href="index.html" lang="en"
+          ><span class="logo-left-part">Web</span>Studio</a
+        >
+        <ul class="list menu">
+          <li class="menu-item">
+            <a class="link menu-link studio-link" href="index.html">Студія</a>
+          </li>
+          <li class="menu-item">
+            <a class="link menu-link" href="portfolio.html">Портфоліо</a>
+          </li>
+          <li class="menu-item">
+            <a class="link menu-link" href="#contacts">Контакти</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+      <ul class="list header-contacts-list">
+        <li class="header-contacts-list-item">
+          <a
+            class="link header-contacts-link header-contacts-email"
+            href="mailto:info@devstudio.com"
+            lang="en"
+            >info@devstudio.com</a
+          >
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="header-contacts-list-item">
+          <a class="link header-contacts-link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="effective-solutions">
+        <h1 class="title effective-solutions-title">
+          Ефективні рішення для вашого бізнесу
+        </h1>
+        <button class="order-button" type="button">Замовити послугу</button>
       </section>
-      <section>
-        <h2 hidden>Наші переваги</h2>
-        <ul>
-          <li>
-            <h3>Увага до деталей</h3>
-            <p>
+      <section class="features">
+        <h2 class="title" hidden>Наші особливості</h2>
+        <ul class="list features-list">
+          <li class="features-list-item">
+            <h3 class="subtitle features-list-title">Увага до деталей</h3>
+            <p class="description">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>
+          <li class="features-list-item">
+            <h3 class="subtitle features-list-title">Пунктуальність</h3>
+            <p class="description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
-            <h3>Планування</h3>
-            <p>
+          <li class="features-list-item">
+            <h3 class="subtitle features-list-title">Планування</h3>
+            <p class="description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
-            <h3>Сучасні технології</h3>
-            <p>
+          <li class="features-list-item">
+            <h3 class="subtitle features-list-title">Сучасні технології</h3>
+            <p class="description">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
+      <section class="occupation">
+        <h2 class="title occupation-title">Чим ми займаємося</h2>
+        <ul class="list occupation-list">
+          <li class="occupation-list-item">
             <img
+              class="occupation-list-image"
               src="images/jobs/programmer.jpg"
               alt="Людина пише код"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="occupation-list-item">
             <img
+              class="occupation-list-image"
               src="images/jobs/ui-designer.jpg"
               alt="Людина займається дизайном мобільного додатку"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="occupation-list-item">
             <img
+              class="occupation-list-image"
               src="images/jobs/web-designer.jpg"
               alt="Людина вибирає колір для сайту"
               width="370"
@@ -89,68 +118,90 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="title team-title">Наша команда</h2>
+        <ul class="list team-list">
+          <li class="team-list-item">
             <img
+              class="team-list-image"
               src="images/our-team/ihor-demyanenko.jpg"
               alt="Ігор Дем'яненко"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="subtitle team-list-title">Ігор Дем'яненко</h3>
+            <p class="description team-list-description" lang="en">
+              Product Designer
+            </p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-list-image"
               src="images/our-team/olga-repina.jpg"
               alt="Ольга Рєпіна"
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="subtitle team-list-title">Ольга Рєпіна</h3>
+            <p class="description team-list-description" lang="en">
+              Frontend Developer
+            </p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-list-image"
               src="images/our-team/mykola-tarasov.jpg"
               alt="Микола Тарасов"
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="subtitle team-list-title">Микола Тарасов</h3>
+            <p class="description team-list-description" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-list-image"
               src="images/our-team/mykhailo-yermakov.jpg"
               alt="Михайло Єрмаков"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="subtitle team-list-title">Михайло Єрмаков</h3>
+            <p class="description team-list-description" lang="en">
+              UI Designer
+            </p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html" lang="en"><span>Web</span>Studio</a>
-      <address id="contacts">
-        <ul>
-          <li>
+    <footer class="page-footer">
+      <a class="link logo footer-logo" href="index.html" lang="en"
+        ><span class="logo-left-part">Web</span>Studio</a
+      >
+      <address id="contacts" class="page-contacts">
+        <ul class="list footer-contacts-list">
+          <li class="footer-contacts-list-item">
             <a
+              class="link footer-contacts-list-link location-address-link"
               href="https://goo.gl/maps/BcTvWUNCGHRJ2NQW6"
               target="_blank"
               rel="noopener norefferer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          <li class="footer-contacts-list-item">
+            <a
+              class="link footer-contacts-list-link"
+              href="mailto:info@devstudio.com"
+              lang="en"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="footer-contacts-list-item">
+            <a class="link footer-contacts-list-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
